--- a/list.html
+++ b/list.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOTEL_BOOKING_WEBSIDE</title>
-    <link rel="stylesheet" href="styles/list.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/list.css">
 </head>
 <body>
-    <header>
-        <div id="header">
-            <div id="logo">
-                <img src="/assests/images/logo.png" alt="logo" class="logo">
-            </div>
-            <div id="login">
-                <a href="login.html" target="_blank" class="login">Login</a>
-            </div>
+ <header>
+        <div id="logo">
+            <img src="/assests/images/logo.png" alt="logo" class="logo">
+        </div>
+        <div id="login">
+            <a href="login.html" target="_blank" class="login">Login</a>
         </div>
     </header>
     <article>
@@ -26,36 +24,60 @@
             </ul>
         </div>
         <div id="content">
-            <table>
-                <tr>
-                    <td>
-                    <div id="img1">
-                        <a href="/detail.html" target=""><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt=""></a>
-                        <h3><a href="">Radison Blu Hotel</a></h3>
-                        <p><a href="">5 Star</a></p>
-                        <p><a href="">New Delhi</a></p>
-                    </div> 
-                    </td>
-                    <td>
-                    <div id="img2">
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt=""><br>
-                        <a href="">The Lalit New Delh</a>
-                        <p>4.5 Star</p>
-                        <p>New Delhi</p>
+            <div>
+                <a href="/detail.html" target="">
+                    <div>
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
                     </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                    <div id="img3">
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt=""><br>
-                        <a href="">Taj Palace</a>
-                        <p>4.0 Star</p>
-                        <p>New Delhi</p>
+                    <div>
+                        <div>
+                            Radison Blu Hotel
+                        </div>
+                        <div>
+                            5 Star                        
+                        </div>
+                        <div>
+                            New Delhi
+                        </div>
+                    </div>   
+                </a>
+            </div> 
+            <div>
+                <a href="">
+                    <div>
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
                     </div>
-                    </td>
-                </tr>
-            </table>
+                    <div>
+                        <div>
+                            The Lalit New Delh
+                        </div>
+                        <div>
+                            4.5 Star                       
+                        </div>
+                        <div>
+                            New Delhi
+                        </div>
+                    </div>   
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <div>
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
+                    </div>
+                    <div>
+                        <div>
+                            Taj Palace
+                        </div>
+                        <div>
+                            4.0 Star                      
+                        </div>
+                        <div>
+                            New Delhi
+                        </div>
+                    </div>   
+                </a>
+            </div>
         </div>
         <div id="map">
             <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
@@ -66,13 +88,13 @@
         <div id="contact">
             <a href="contact.html" target="_blank">CONTACT US</a>
         </div>
+        <div id="copy">
+            &copy 2020 ROOM SEARCH PVT. LTD.
+        </div>
         <div id="media">
             <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
             <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
             <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
-        </div>
-        <div id="copy">
-            <p>&copy 2020 ROOM SEARCH PVT. LTD.</p>
         </div>
     </footer>
 </body>
