--- a/list.html
+++ b/list.html
@@ -5,88 +5,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOTEL_BOOKING_WEBSIDE</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles/list.css">
 </head>
 <body>
- <header>
+    <header>
         <div id="logo">
             <img src="/assests/images/logo.png" alt="logo" class="logo">
         </div>
         <div id="login">
-            <a href="login.html" target="_blank" class="login">Login</a>
+            <button type="button" class="btn btn-light btn-sm float-right align-middle" data-toggle="modal" data-backdrop="false" data-target="#login-modal">LOGIN</button>
+            <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal-label" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="login-modal-label">Please Login</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="login-form">
+                                <div class="login-field">
+                                    <label for="username">Username: </label>
+                                    <input type="text" id="username" name="username" placeholder="Enter Username" required />
+                                </div>
+                                <div class="login-field">
+                                    <label for="password">Password: </label>
+                                    <input type="password" id="password" name="password" placeholder="Enter Password" required />
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button id="login-button" type="button" class="btn btn-primary" data-dismiss="modal" onclick="login(event)">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <article>
-        <div id="nav">
-            <ul>
-                <li><a href="#content" target="_self">List View</a></li>
-                <li><a href="#map" target="_self">Map View</Map></a></li>
-            </ul>
-        </div>
-        <div id="content">
-            <div>
-                <a href="/detail.html" target="">
-                    <div>
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-                    </div>
-                    <div>
+        <ul class="nav nav-pills" id="pills-tab">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="pill" href="#content">List View</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#map-view">Map View</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="pills-tab-content">
+            <div id="content" class="tab-pane fade show active">
+                <div class="tab-pane fade show active">
+                    <a href="/detail.html" target="">
                         <div>
-                            Radison Blu Hotel
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
                         </div>
                         <div>
-                            5 Star                        
+                            <div>
+                                Radison Blu Hotel
+                            </div>
+                            <div>
+                                5 Star                        
+                            </div>
+                            <div>
+                                New Delhi
+                            </div>
+                        </div>   
+                    </a>
+                </div> 
+                <div>
+                    <a href="">
+                        <div>
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
                         </div>
                         <div>
-                            New Delhi
-                        </div>
-                    </div>   
-                </a>
-            </div> 
-            <div>
-                <a href="">
-                    <div>
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
-                    </div>
-                    <div>
+                            <div>
+                                The Lalit New Delh
+                            </div>
+                            <div>
+                                4.5 Star                       
+                            </div>
+                            <div>
+                                New Delhi
+                            </div>
+                        </div>   
+                    </a>
+                </div>
+                <div>
+                    <a href="">
                         <div>
-                            The Lalit New Delh
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
                         </div>
                         <div>
-                            4.5 Star                       
-                        </div>
-                        <div>
-                            New Delhi
-                        </div>
-                    </div>   
-                </a>
+                            <div>
+                                Taj Palace
+                            </div>
+                            <div>
+                                4.0 Star                      
+                            </div>
+                            <div>
+                                New Delhi
+                            </div>
+                        </div>   
+                    </a>
+                </div>
             </div>
-            <div>
-                <a href="">
-                    <div>
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            Taj Palace
-                        </div>
-                        <div>
-                            4.0 Star                      
-                        </div>
-                        <div>
-                            New Delhi
-                        </div>
-                    </div>   
-                </a>
+            <div id="map-view" class="tab-pane fade">
+                <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
             </div>
-        </div>
-        <div id="map">
-            <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
-        </div>
-        MAP VIEW
+    </div>
     </article>
     <footer>
         <div id="contact">
-            <a href="contact.html" target="_blank">CONTACT US</a>
+            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
+            <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <p>
+                                    Thank you for reaching out!!! <br>
+                                    Please enter you email and we will get back to you.
+                                </p>
+                                <label for="email">Email: </label>
+                                <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="copy">
             &copy 2020 ROOM SEARCH PVT. LTD.
