--- a/payment.html
+++ b/payment.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOTEL_BOOKING_WEBSIDE_Payment</title>
-    <link rel="stylesheet" href="styles/payment.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles/payment.css">
 </head>
 <body>
     <header>
@@ -13,7 +16,34 @@
             <img src="/assests/images/logo.png" alt="logo" class="logo">
         </div>
         <div id="login">
-            <a href="login.html" target="_blank" class="login">Login</a>
+            <button type="button" class="btn btn-light btn-sm float-right align-middle" data-toggle="modal" data-backdrop="false" data-target="#login-modal">LOGIN</button>
+            <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal-label" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="login-modal-label">Please Login</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="login-form">
+                                <div class="login-field">
+                                    <label for="username">Username: </label>
+                                    <input type="text" id="username" name="username" placeholder="Enter Username" required />
+                                </div>
+                                <div class="login-field">
+                                    <label for="password">Password: </label>
+                                    <input type="password" id="password" name="password" placeholder="Enter Password" required />
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button id="login-button" type="button" class="btn btn-primary" data-dismiss="modal" onclick="login(event)">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <article>
@@ -49,15 +79,40 @@
                         <label>Total Amount:</label> <label>Rs 10000</label>
                     </p>
                 </div>
-                <a href="#" id="pay-now">
-                    Pay Now
-                </a>
+                <button type="button" class="btn btn-success" id="pay-now" disabled>
+                    Pay Now 
+                </button>
             </div>
         </div>
     </article>
     <footer>
         <div id="contact">
-            <a href="contact.html" target="_blank">CONTACT US</a>
+            <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-backdrop="false" data-target="#contact-modal">Contact Us</button>
+            <div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="contact-modal-label">Get in touch</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <p>
+                                    Thank you for reaching out!!! <br>
+                                    Please enter you email and we will get back to you.
+                                </p>
+                                <label for="email">Email: </label>
+                                <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Sumbit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="copy">
             &copy 2020 ROOM SEARCH PVT. LTD.
